@@ -15,6 +15,7 @@ Device specific changes/fixes
 	* GPS-Logger3 - calculate offset of both pressure sensors while calculating pressure ∆TEC
 	* GPS-Logger3 - calculate average pressure ∆TEC for 40 km/h and 70 km/h and average AirSpeed for pressure ∆TEC 1,0 hPa
 	* HoTTAdapter2 - update graphics template files to have voltage in blue, current in red, ...
+	* OpenTx-Telemetry - correct parsing of GPS tag with coordinates in degree with different decimals
 
 
 Version 3.5.1 - 25 Oct 2021
